--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbo",
-    "build": "next build", 
+    "build": "next build",
     "start": "next start",
     "db:setup": "npx tsx lib/db/setup.ts",
     "db:seed": "npx tsx lib/db/seed.ts",
@@ -25,9 +25,8 @@
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.0.3",
     "@types/bcryptjs": "^2.4.6",
-    "@types/node": "^22.8.6",
-    "@types/react": "npm:types-react@19.0.0-rc.1",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
     "autoprefixer": "^10.4.20",
     "bcryptjs": "^2.4.3",
@@ -55,10 +54,12 @@
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-react-aria-components": "1.1.6",
     "tsx": "^4.7.0",
-    "typescript": "^5.6.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/node-telegram-bot-api": "^0.64.4"
+    "@types/node": "^22.13.1",
+    "@types/node-telegram-bot-api": "^0.64.4",
+    "@types/react": "npm:types-react@19.0.0-rc.1",
+    "typescript": "^5.7.3"
   }
 }
